// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Icon Component correctly 1`] = `
<i
  className="material-icons  sc-ifAKCX kRKplF"
  color={undefined}
  onClick={undefined}
  scale={undefined}
>
  check_circle
</i>
`;

exports[`renders the Icon Component correctly 2`] = `
<i
  className="material-icons  sc-ifAKCX biNVRB"
  color="success"
  onClick={undefined}
  scale="l"
>
  check_circle
</i>
`;

exports[`renders the Icon Component correctly 3`] = `
<i
  className="material-icons  sc-ifAKCX kWifBW"
  color="success"
  onClick={undefined}
  scale="l"
>
  autorenew
</i>
`;
